--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="New Year&#39;s Resolutions - Travel : ">
+    <meta name="description" content="New Year&#39;s Resolutions - Travel : New Year&#39;s Resolutions - Travel">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,19 +19,15 @@
           <a id="forkme_banner" href="https://github.com/IndyHurt/nyr-hotel">View on GitHub</a>
 
           <h1 id="project_title">New Year&#39;s Resolutions - Travel</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/IndyHurt/nyr-hotel/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/IndyHurt/nyr-hotel/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Three months ago, when we were all ushering in 2016, did you resolve to travel more this year?  You are not alone.  “Travel more” New Year’s resolutions are very popular.   With Spring Break upon us, help your fellow travel resolution enthusiasts by adding hotels and other types of lodging to OpenStreetMap.  There are probably a collection of hotels in your local area that you are very familiar with, and there may be a few additional ones that you would like to know more about.  This is your chance to do some investigating which could lead to your next staycation or an easier time finding places to put up friends and family when they all decide to visit at once.  No doubt there are places you have stayed in the past that left a lasting impression (for better or for worse).  Now is your chance to share your local knowledge from around town, or towns you've visited over the years.  </p>
+        
+<p>Three months ago, when we were all ushering in 2016, did you resolve to travel more this year?  You are not alone.  “Travel more” New Year’s resolutions are very popular.   With Spring Break upon us, help your fellow travel resolution enthusiasts by adding hotels and other types of lodging to OpenStreetMap.  There are probably a collection of hotels in your local area that you are very familiar with, and there may be a few additional ones that you would like to know more about.  This is your chance to do some investigating which could lead to your next staycation or an easier time finding places to put up friends and family when they all decide to visit at once.  No doubt there are places you have stayed in the past that left a lasting impression (for better or for worse).  Now is your chance to share your local knowledge from around town, or towns you've visited over the years.  </p>
 
 <p>Business listings and other points of interest are slowly gaining momentum in OpenStreetMap.  Curious to know how prevalent hotels, motels, hostels, and other forms of lodging are in OpenStreetmap?  Check out this table which includes our New Year's Resolutions cities, but this time we are including phone numbers instead of hours since many lodging options recieve guests at any hour:</p>
 
@@ -133,8 +129,7 @@
 </tr>
 </tbody>
 </table>
-
-<p></p><a href="https://github.com/IndyHurt/poi-stats/blob/gh-pages/queries/lodging_sql.sql"><sup>*</sup>SQL queries</a> for those interested in generating stats for additional cities.
+<caption><a href="https://github.com/IndyHurt/poi-stats/blob/gh-pages/queries/lodging_sql.sql"><sup>*</sup>SQL queries</a> for those interested in generating stats for additional cities.</caption>
 
 <h4>
 <a id="helpful-tags" class="anchor" href="#helpful-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Helpful Tags</h4>
