--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <p>Would it be helpful to see where the current lodging related features are in OpenStreetMap?  There's a map for that!  Hover over any of the bright blue highlighted features to bring up an info bubble with links to editing tools that can be used to add additional tags.  (While you pan and zoom to your neighborhood, note that loging features show up at various zoom levels dending on size and tags.)<br>
 </p><div id="lodging"></div><p>This map is interactive! <a href="http://indyhurt.github.io/nyr-hotel/map/?hotel">Open full screen ➹</a> <br></p> 
 
-<p>Don't know Vancouver? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
+<p>Don't know São Paulo? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
 
 <p>If you are trying to decide between creating a point or a polygon to represent a feature, a point is great when the lodging is in a building that contains other businesses and/or residences.  If your lodging occupies the entire building, digitize a building polygon if it doesn't already exist and add your tags to it.   </p>
 
