--- a/map/index.html
+++ b/map/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Grocery POIs</title>
+    <title>Lodging</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
 
@@ -101,9 +101,9 @@
     <script>
       MPZN.bug({
           name: 'Tangram',
-          link: 'https://mapzen.com/blog/new-years-resolutions-groceries',
-          tweet: 'New Years Resolutions - Grocery, a map from @mapzen',
-          repo: 'https://github.com/indyhurt/nyr-grocery/'
+          link: 'https://mapzen.com/blog/new-years-resolutions-travel',
+          tweet: 'New Years Resolutions - Travel, a map from @mapzen',
+          repo: 'https://github.com/indyhurt/nyr-hotel/'
     });
     </script>
 	<script>
