imbedded map update

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <a id="interactive-map" class="anchor" href="#interactive-map" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interactive Map</h4>
 
 <p>Would it be helpful to see where the current lodging related features are in OpenStreetMap?  There's a map for that!  Hover over any of the bright blue highlighted features to bring up an info bubble with links to editing tools that can be used to add additional tags.  (While you pan and zoom to your neighborhood, note that loging features show up at various zoom levels dending on size and tags.)<br>
-</p><div id="lodging"></div><p>This map is interactive! <a href="http://indyhurt.github.io/nyr-hotel/map/?hotel">Open full screen ➹</a> <br></p> 
+</p><iframe width="100%" height="400px" src="map/embed.html?hotel"></iframe><p>(This map is interactive! <a href="http://indyhurt.github.io/nyr-hotel/map/?hotel">Open full screen ➹</a> )</p> 
 
 <p>Don't know São Paulo? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
 
