text and map updates

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 </table>
 <caption><a href="https://github.com/IndyHurt/poi-stats/blob/gh-pages/queries/lodging_sql.sql"><sup>*</sup>SQL queries</a> for those interested in generating stats for additional cities.</caption>
 
+<p>Wow!  So many lodging options in Seoul, but so few associated attributes.  An amazing opportunity for editors.  For websites and phone numbers, Melbourne and Stockholm are leading the pack, with Melbourne edging out Stockholm just a bit with it's additional address details.  A street address on a feature adds so much value for many types of map services.<p>
+
 <h4>
 <a id="helpful-tags" class="anchor" href="#helpful-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Helpful Tags</h4>
 
@@ -176,7 +178,7 @@
 <p>Would it be helpful to see where the current lodging related features are in OpenStreetMap?  There's a map for that!  Hover over any of the bright blue highlighted features to bring up an info bubble with links to editing tools that can be used to add additional tags.  (While you pan and zoom to your neighborhood, note that loging features show up at zoom level 17, so zooooom in!)<br>
 </p><iframe width="100%" height="400px" src="map/embed.html?hotel"></iframe><p>(This map is interactive! <a href="http://indyhurt.github.io/nyr-hotel/map/?hotel">Open full screen ➹</a> )</p> 
 
-<p>Don't know São Paulo? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
+<p>Don't know Vancouver? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
 
 <p>If you are trying to decide between creating a point or a polygon to represent a feature, a point is great when the lodging is in a building that contains other businesses and/or residences.  If your lodging occupies the entire building, digitize a building polygon if it doesn't already exist and add your tags to it.   </p>
 
