update for expected tile changes

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <h4>
 <a id="interactive-map" class="anchor" href="#interactive-map" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interactive Map</h4>
 
-<p>Would it be helpful to see where the current lodging related features are in OpenStreetMap?  There's a map for that!  Hover over any of the bright blue highlighted features to bring up an info bubble with links to editing tools that can be used to add additional tags.  (While you pan and zoom to your neighborhood, note that loging features show up at zoom level 17, so zooooom in!)<br>
+<p>Would it be helpful to see where the current lodging related features are in OpenStreetMap?  There's a map for that!  Hover over any of the bright blue highlighted features to bring up an info bubble with links to editing tools that can be used to add additional tags.  (While you pan and zoom to your neighborhood, note that large lodging features show up at zoom level 15, but the bulk of the features show up at zoom 16.)<br>
 </p><iframe width="100%" height="400px" src="map/embed.html?hotel"></iframe><p>(This map is interactive! <a href="http://indyhurt.github.io/nyr-hotel/map/?hotel">Open full screen ➹</a> )</p> 
 
 <p>Don't know Vancouver? Search for your city! Is your go-to hotel missing all together?  Shift-click anywhere on the map to open iD or open your favorite OpenStreetMap editor to start mapping!  </p>
